fixed tab wrapping bug

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -1,7 +1,6 @@
 
 ul.tabs {
   .user-select(none);
-  white-space: nowrap;
   border: 0 solid transparent;
   li.tab {
     display: inline-block;
